Logout view Created

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <h2>______________Hi My Dear Friend_______________</h2>
     <button><a href="{% url 'forms:home' %}">HomePage</a></button>
     <button><a href="{% url 'forms:registration' %}">Registration</a></button>
+    <button><a href="{% url 'forms:logout' %}">Logout</a></button>
     {% block content %}
 
     {% endblock content %}
