--- a/templates/base.html
+++ b/templates/base.html
@@ -11,9 +11,13 @@
     <h2>______________Hi My Dear Friend_______________</h2>
     <button><a href="{% url 'forms:home' %}">HomePage</a></button>
     <button><a href="{% url 'forms:registration' %}">Registration</a></button>
-    <button><a href="{% url 'forms:logout' %}">Logout</a></button>
+    <button><a href="{% url 'forms:login' %}">Login</a></button>
     {% block content %}
 
     {% endblock content %}
+    <div>
+        <hr />
+        <button><a href="{% url 'forms:logout' %}">Logout</a></button>
+    </div>
 </body>
 </html>
