Password Change view created

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
     <div>
         <hr />
         <button><a href="{% url 'forms:logout' %}">Logout</a></button>
+        <button><a href="{% url 'forms:passwordChange' %}">Password Change</a></button>
     </div>
 </body>
 </html>
