User Change Dashboard created

--- a/forms/templates/forms/dashboard.html
+++ b/forms/templates/forms/dashboard.html
@@ -4,5 +4,21 @@
 {% block content %}
     <h2>User Dashboard</h2>
     <h3>Login as: {{ name }}</h3>
+    <form action="" method="post">{% csrf_token %}
+        {% for form in form %}
+            {{ form.label_tag }}
+            {{ form }}<br><br>
+        {% endfor %}
+        <input type="submit" value="Submit">
+    </form>
+
+    <hr>
+    <form action="" method="post">{% csrf_token %}
+    {% for form in form %}
+        {{ form.label_tag }}
+        {{ form.value }}<br><br>
+    {% endfor %}
+
+    </form>
 
 {% endblock %}
