--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
     <button><a href="{% url 'forms:home' %}">HomePage</a></button>
     <button><a href="{% url 'forms:registration' %}">Registration</a></button>
     <button><a href="{% url 'forms:login' %}">Login</a></button>
+    <button><a href="{% url 'forms:dashboard' %}">Dashboard</a></button>
     {% block content %}
 
     {% endblock content %}
